fixes scrollbar problems

--- a/src/eval-frame/style/cell-styles.css
+++ b/src/eval-frame/style/cell-styles.css
@@ -191,7 +191,7 @@ div.hidden-cell {
 }
 
 .rep-container {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 div.dataframe-rep {
